--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,11 +3,18 @@
     <string name="regist">注册</string>
     <string name="password">密码</string>
     <string name="checkpassword">确认密码</string>
-    <string name="mail">邮箱</string>
     <string name="login">登录</string>
     <string name="sign_up">Sign Up</string>
     <string name="friend">好友</string>
     <string name="null_null">null/null</string>
     <string name="username">USERNAME</string>
     <string name="last_msg">last msg</string>
+    <string name="headImg">头像</string>
+    <string name="id">ID</string>
+    <string name="createtime">创建时间</string>
+    <string name="userName">用户名</string>
+    <string name="sexy">性别</string>
+    <string name="mail">邮箱</string>
+    <string name="phoneNumber">手机</string>
+    <string name="userId">唯一标识</string>
 </resources>
